# qemmu/routes/v1/routes.go
@@ -49,10 +49,12 @@ func organizationRoutes(g *echo.Group, c controllers.OrganizationController) {
 }
 
 func userRoutes(g *echo.Group, c controllers.UserController) {
+	// /api/v1/user/admin/organization/all/{id}
 	g.GET("/all", c.GetAllUser)
 	g.GET("/:id", c.GetUserByID)
 	g.GET("", c.GetUser)
 	g.GET("/change/organization/:id", c.ChangeOrganization)
-	g.GET("/admin/all", c.GetAllUserAdmin)
+	g.GET("/admin/all", c.GetUserAdminAll)
 	g.PATCH("/admin/:id", c.UpdateUserAdmin)
+	g.GET("/admin/organization/all/:id", c.GetUserAdminAllByOrganizationId)
 }
